--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -118,6 +118,7 @@ td {
   margin-bottom: 1em;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 #tutu--search--input {
@@ -127,6 +128,12 @@ td {
   padding: 0 10px;
   height: 25px;
   box-sizing: border-box;
+}
+#tutu--search--colum-selector {
+  margin: 10px 0;
+}
+#tutu--search--colum-selector label {
+  margin-right: 1em;
 }
 
 /* Счетчик записей */
